<resources>
    <string name="app_name">Posesionista</string>
    <string name="label_nombre">Nombre</string>
    <string name="label_precio">Precio</string>
    <string name="label_serie">Serie</string>
    <string name="nombre">Nombre Cosa</string>
    <string name="precio">Precio cosa</string>
    <string name="serie">Número de serie</string>
    <string name="fecha">Fecha</string>
    <string name="dialog_delete_item">¿Estás seguro de que deseas elimiar este elemento?</string>
    <string name="si">Sí</string>
    <string name="Si">Sí</string>
    <string name="cancel">Cancelar</string>
    <string name="dialog_title">Confirmación</string>
    <string name="change_date">Cambiar fecha</string>
    <string name="nueva_cosa">Añade cosa</string>
    <string name="detalle_cosa">Detalle de cosa</string>
    <string name="section">Nombre de seccion</string>
    <string name="total_cosas">Número total de cosas:</string>
    <string name="total_precios">Suma de precios:</string>
    <string name="cero">0</string>
</resources>