<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/deletecolor"
    android:orientation="vertical"
    android:paddingHorizontal="15dp"
    android:paddingVertical="10dp">

    <ImageView
        android:id="@+id/cosa_image"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/detalle_cosa" />

    <TextView
        android:id="@+id/label_nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@id/cosa_image"
        android:text="@string/label_nombre"
        android:textColor="@color/white"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/label_precio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/label_nombre"
        android:text="@string/label_precio"
        android:textAlignment="textEnd"
        android:textColor="@color/white"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/label_serie"
        android:layout_width="241dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/label_nombre"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="82dp"
        android:layout_toEndOf="@id/cosa_image"
        android:text="@string/label_serie"
        android:textColor="@color/white"
        android:textSize="20sp" />
</RelativeLayout>