<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/nombre_cosa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/nombre"
        app:layout_constraintBottom_toBottomOf="@+id/labelNombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/labelNombre"
        app:layout_constraintTop_toTopOf="@+id/labelNombre"
        app:layout_constraintVertical_bias="0.571"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/labelNombre"
        android:layout_width="63dp"
        android:layout_height="24dp"
        android:layout_marginTop="64dp"
        android:labelFor="@id/nombre_cosa"
        android:text="@string/label_nombre"
        app:layout_constraintEnd_toStartOf="@+id/nombre_cosa"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/labelPrecio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:labelFor="@id/precio_cosa"
        android:text="@string/label_precio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/precio_cosa"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelNombre" />

    <EditText
        android:id="@+id/precio_cosa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        android:text="@string/precio"
        app:layout_constraintBottom_toBottomOf="@+id/labelPrecio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.771"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/labelPrecio"
        app:layout_constraintVertical_bias="0.384"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/labelSerie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="52dp"
        android:labelFor="@id/serie_cosa"
        android:text="@string/label_serie"
        app:layout_constraintEnd_toStartOf="@+id/serie_cosa"
        app:layout_constraintHorizontal_bias="0.875"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelPrecio" />

    <EditText
        android:id="@+id/serie_cosa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/serie"
        app:layout_constraintBottom_toBottomOf="@+id/labelSerie"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.771"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/labelSerie"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/labelFecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="392dp"
        android:text="@string/fecha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>