<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="MaterialAlertDialog.MaterialComponents.Title.Text"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cosa_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toTopOf="@id/textView2"
        android:layout_marginBottom="60dp">

    </androidx.recyclerview.widget.RecyclerView>

    <TextView
        android:id="@+id/textView2"
        style="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/total_cosas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cosa_recycler_view" />

    <TextView
        android:id="@+id/textView6"
        style="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_precios"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/total_cosas"
        style="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cero"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <TextView
        android:id="@+id/total_precios"
        style="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cero"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.587"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toTopOf="@+id/textView6" />

</androidx.constraintlayout.widget.ConstraintLayout>
